@@ -53,7 +53,7 @@
   <skin>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-skin</artifactId>
-    <version>4</version>
+    <version>4.1</version>
   </skin>
 
   <body>
