@@ -5,13 +5,14 @@ The Apache Commons Parent team is pleased to announce the release of Apache Comm
 
 The Apache Commons Parent POM provides common settings for all Apache Commons components.
 
-Updates plugins and parent; fixes COMMONSSITE-87
+Updates plugins and parent; fixes COMMONSSITE-87 and COMMONSSITE-82
 
 Changes in this version include:
 
 Changes:
 o                   Update Apache Parent POM : 16 -> 17
 o                   COMMONSSITE-87 - ensure assembly plugin runs after all package phase plugins
+o                   COMMONSSITE-82 - use Commons Skin 4.1 (site.xml)
 o                   maven-release-plugin 2.5.2 -> 2.5.3
 o                   buildnumber-maven-plugin 1.3 -> 1.4 (supports git SCM now)
 o                   maven-assembly-plugin 2.5.5 -> 2.6
